# orkan

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  MEMORY.md  PRD.md  README.md  qlib.c
.claude/: settings.local.json
archive/: multiQubitGate.c  testbed.c  timeEvoString.c  timeExpValObs.c  timeObsPauli.c  timePaulis.c  timing.c  timing.h  walltimeGradPQC.c
benchmark/: CIRCUIT_PLAN.md  CMakeLists.txt  PERQUBIT_PLAN.md  QISKIT_AER_PLAN.md  README.md
benchmark/include/: bench.h  bench_circuit.h  bench_kraus.h  bench_result.h
benchmark/src/: bench_aer.cpp  bench_aer_dm.cpp  bench_baselines.c  bench_blas.c  bench_circuit.c  bench_circuit_aer_dm.cpp  bench_circuit_main.c  bench_circuit_qlib.c  bench_circuit_quest.c  bench_circuit_qulacs.cpp  bench_console.c  bench_csv.c  bench_kraus_aer.cpp  bench_kraus_blas.c  bench_kraus_chan.c  bench_kraus_main.c  bench_kraus_orkan.c  bench_kraus_qlib.c  bench_kraus_quest.c  bench_kraus_qulacs.cpp  bench_kraus_run.c  bench_main.c  bench_mixed.c  bench_orkan.c  bench_pgfplots.c  bench_qlib.c  bench_qpp.cpp  bench_quest.c  bench_qulacs.cpp  bench_result.c  bench_run.c  bench_util.c
circ/: CMakeLists.txt
circ/include/: circlib.h  diag.h  pqc.h
circ/src/: pauliOmp.c  pqc.c
circ/test/: testCirclib.c  testDiag.h  testPQC.c  testPQC.h
circlib/: CMakeLists.txt  circlib.c  circlib.h  diag.h  makefile  pauli.c  testPauli.out
circlib/include/: circlib.h  diag.h  pauli.h  pauli.h.in  pauliBlMp.h  pauliBlas.h  pauliOld.h  pauliOmp.h  profile.h
circlib/src/: circlib.c  diag.c  misc.c  operator.c  pauli.c  pauliBlMp.c  pauliBlas.c  pauliOld.c  pauliOmp.c  profile.c
circlib/test/: testCirclib.c  testDiag.c  testDiag.h  testPauli.c  testPauli.h  testPauli.h.in
cmake/: CompilerFlags.cmake  Dependencies.cmake  OrkanConfig.cmake.in  PlatformConfig.cmake  QSimConfig.cmake.in
gate/: CMakeLists.txt
gate/include/: mhipster.h  qhipster.h  qhipster.h.in
gate/src/: mhipster.c  qhipBlas.c  qhipster.c
gate/test/: testQhipster.c
gatelib/: CMakeLists.txt  makefile  testQhipster.out
gatelib/include/: gatelib.h  gatelib.h.in  profile.h  qhipBlMp.h  qhipBlas.h  qhipGcd.h  qhipOmp.h  qhipster.h
gatelib/src/: gatelib.c  profile.c  qhipBlMp.c  qhipBlas.c  qhipGcd.c  qhipOmp.c  qhipster.c
gatelib/test/: testQhipster.c
internal/: CMakeLists.txt
internal/include/: gateMat.h  linalg.h  utils.h
internal/src/: finDiff.c  gateMat.c  linalg.c  pauliMat.c  utils.c
mathlib/: CMakeLists.txt  linalg.c  linalg.h
meas/: CMakeLists.txt
meas/include/: exact.h
meas/src/: exact.c
meas/test/: testExact.c  testExact.h
measlib/: CMakeLists.txt  exact.c  exact.h  makefile  testExact.out
measlib/include/: exact.h  exact.h.in  exactBlMp.h  exactBlas.h  exactOld.h  exactOmp.h  profile.h
measlib/src/: exact.c  exactBlMp.c  exactBlas.c  exactOld.c  exactOmp.c  profile.c
measlib/test/: testExact.c
profile/: CMakeLists.txt  PLAN_h_tiled_optimization.md  REPORT_x_tiled.md  results_h_tiled.csv  results_x_tiled.csv
profile/include/: profile.h
profile/src/: profile_channel_tiled.c  profile_h_tiled.c  profile_x_tiled.c
src/: CMakeLists.txt  cplxutil.c  gate.c  gate_packed.c  gate_packed_1q.c  gate_packed_2q.c  gate_packed_3q.c  gate_packed_cp.c  gate_packed_cs.c  gate_packed_ct.c  gate_packed_ctdg.c  gate_packed_swap.c  gate_pure.c  gate_tiled.c  gate_tiled_swap.c  index.h  linalg.c  mhipster.c  mhipster_block.c  qhipster.c  state.c  state_blocked.c  state_packed.c  state_tiled.c
src/channel/: channel.c  channel_packed.c  channel_tiled.c
src/circ/: circ.c  circ_packed.c  circ_pure.c  circ_tiled.c  pauli.c  pauli_pure.c
src/circuit/: pauli.c
src/gate/: gate.c  gate_pure.c
src/gate/packed/: gate_packed_1q.c  gate_packed_ccx.c  gate_packed_ch.c  gate_packed_chy.c  gate_packed_cpdg.c  gate_packed_csdg.c  gate_packed_cx.c  gate_packed_cy.c  gate_packed_cz.c  gate_packed_swap.c
src/gate/tiled/: gate_tiled.c  gate_tiled.h  gate_tiled_1q.c  gate_tiled_2q.c  gate_tiled_ccx.c  gate_tiled_ccx.c.new  gate_tiled_cx.c  gate_tiled_cx_new.c.bak  gate_tiled_cy.c  gate_tiled_cz.c  gate_tiled_h.c  gate_tiled_hy.c  gate_tiled_p.c  gate_tiled_rx.c  gate_tiled_ry.c  gate_tiled_rz.c  gate_tiled_s.c  gate_tiled_sdg.c  gate_tiled_swap.c  gate_tiled_swap_new.c.bak  gate_tiled_t.c  gate_tiled_tdg.c  gate_tiled_x.c  gate_tiled_y.c  gate_tiled_z.c
src/internal/: utils.h
src/meas/: meas.c  meas_packed.c  meas_pure.c  meas_tiled.c
src/state/: state.c  state_internal.h  state_packed.c  state_pure.c  state_tiled.c
state/: CMakeLists.txt
state/include/: mstate.h  pstate.h
state/src/: mstate.c  pstate.c
test/: CMakeLists.txt  finDiff.c  finDiff.h  gateMat.c  gateMat.h  helpfunc.h  pauliMat.c  pauliMat.h  test.h  test_qhipster.h  utils.c  utils.h
test/channel/: test_channel.c  test_channel_packed.c  test_channel_superop.c  test_channel_tiled.c
test/circ/: test_circ.c  test_circ_packed.c  test_circ_pure.c  test_circ_tiled.c  test_circuit.c  test_pauli.c
test/circuit/: test_circuit.c  test_pauli.c
test/gate/: test_gate.c  test_gate_packed.c  test_gate_packed_1q.c  test_gate_packed_2q.c  test_gate_packed_3q.c  test_gate_pure_1q.c  test_gate_pure_2q.c  test_gate_pure_3q.c  test_gate_tiled.c  test_gate_tiled_1q.c  test_gate_tiled_2q.c  test_gate_tiled_2q_mat.c  test_gate_tiled_3q.c
test/include/: gatemat.h  linalg.h  test.h  test_circ.h  test_gate.h  test_meas.h  test_mixed_states.h  test_mixed_utils.h  test_pure_states.h  test_qhipster.h
test/meas/: test_meas.c  test_meas_packed.c  test_meas_pure.c  test_meas_tiled.c
test/src/: gatemat.c  linalg.c  test.c  test_gate.c  test_gate_packed.c  test_gate_pure.c  test_gate_tiled.c  test_mhipster.c  test_mhipster_block.c  test_mixed_states.c  test_pure_states.c  test_qhipster.c  test_state.c  test_state_packed.c  test_state_pure.c  test_state_runner.c  test_state_tiled.c
test/state/: test_state.c  test_state_packed.c  test_state_pure.c  test_state_tiled.c
test/utility/: gatemat.c  linalg.c  test_mixed_states.c  test_mixed_utils.c  test_pure_states.c
(+75 files in other folders)
